# WebAutomataConstructor

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json  precache-manifest.0436581614d51642479e6e3eb28b56ea.js  precache-manifest.046837599d03da9162626ada645f1f73.js  precache-manifest.1041c9459d8883a6e8d07bca1cdb7053.js  precache-manifest.175a488663bc8672ee792a4f6e3a4a1d.js  precache-manifest.20943030f53b26f4e99dcc44c63e2e37.js  precache-manifest.221aea9933e2a99961abc37fb0a02dfe.js  precache-manifest.22a69b051e0fc027dbbe0c024e9b0bcf.js  precache-manifest.2c63838b1cfd3c63ed89741aeb968ccb.js  precache-manifest.2d67abb40c19f190afe3f02b25c8d3cd.js  precache-manifest.37dd9eadc0283e4ba63abc7652a4c2ae.js  precache-manifest.470c3ff033431075e8f8b3f1257ac591.js  precache-manifest.5fec631813dba51edf22e60b84d2a566.js  precache-manifest.61269c3e31d5a510cb799a6604c99142.js  precache-manifest.6c175c2455865d32d7973a71111ac538.js  precache-manifest.8a7b2d34d4cfcb1a9959a97c09228955.js  precache-manifest.a8c3531495fc630c151aa1e8679dd8e2.js  precache-manifest.b70efb7b3a47485255487f4f5516f7f5.js  precache-manifest.c3f6c99a6aac02f6b83f85f49c095a81.js  service-worker.js
back/auth/: .env.example  Cargo.toml
back/auth/src/: auth_handler.rs  main.rs  obtain_handler.rs  state.rs
back/ping/: Cargo.toml  rustfmt.toml
back/ping/src/: auth_middleware.rs  main.rs  ping_handler.rs
back/saves/: .env.example  Cargo.toml
back/saves/src/: auth_middleware.rs  main.rs
back/saves/src/handlers/: delete_save.rs  get_save.rs  get_saves.rs  mod.rs  put_save.rs  rename_save.rs
(+317 files in other folders)
