[package]
name = "auth"
version = "0.1.0"
authors = ["ususucsus <usarti01@gmail.com>"]
edition = "2018"

[dependencies]
core = {version = "0.1", path="../core"}

actix-web = "3.3"
dotenv = "0.15"
simple_logger = "1.13"
log = "0.4"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.13"
derive-getters = "0.2"
openssl = "0.10"
cache_control = "0.1"